[gd_scene load_steps=3 format=3 uid="uid://vmz4yugrjn5o2"]

[ext_resource type="Script" uid="uid://pxpx2y2gsfqrb" path="res://algorithms/wfc/wfc_test.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://fdvf213bc9xd8" path="res://algorithms/wfc/wfc_grid_3d.tscn" id="2"]

[node name="WFCTest" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 5, 14, 14)
current = true
fov = 70.0

[node name="WFCGrid3D" parent="." instance=ExtResource("2")]
grid_width = 15
grid_depth = 15
animate_generation = true
animation_speed = 0.05

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
light_color = Color(1, 0.968627, 0.921569, 1)
shadow_enabled = true

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, -0.25, 0, 0.5, 0.866025, 0.5, -0.75, -0.433013, 0, 10, 0)
light_color = Color(0.678431, 0.776471, 1, 1)
light_energy = 0.3

[connection signal="generation_complete" from="WFCGrid3D" to="." method="_on_WFCGrid3D_generation_complete"]
[connection signal="generation_started" from="WFCGrid3D" to="." method="_on_WFCGrid3D_generation_started"]
[connection signal="tile_placed" from="WFCGrid3D" to="." method="_on_WFCGrid3D_tile_placed"]
